# foobar-social

./: .gitignore  .travis.yml  Makefile  README.md  deploy_all_to_kubernetes.sh  deploy_to_docker_hub.sh  docker-compose.yml  google_cloud_config.md  mypy.ini  postgresql.conf  updateConfig.sh
apilayer/: Dockerfile  apilayer-kube.yaml  dependency-reduced-pom.xml  kube_deploy.sh  pom.xml
apilayer/src/main/java/com/foobar/social/: ApiServer.java
auth/: Dockerfile  __main__.py  auth_kube.yaml  kube_deploy.sh  requirements.txt
client/: Dockerfile  __main__.py  requirements.txt
create_user/: Dockerfile  __main__.py  create_user_kube.yaml  kube_deploy.sh  requirements.txt
friends/: Dockerfile  __main__.py  friends_kube.yaml  kube_deploy.sh
friends_db/: CreateFriendsDB.sql  Dockerfile  friends_db_kube.yaml  kube_deploy.sh
news_feed/: CMakeLists.txt  Dockerfile  kube_deploy.sh  news_feed_kube.yaml
news_feed/include/: NewsFeedDataAccessClient.h  PostsClient.h  main.cpp
news_feed_data_access/: .dockerignore  Dockerfile  Package.resolved  Package.swift  README.md  kube_deploy.sh  news_feed_data_access_kube.yaml
news_feed_data_access/Sources/news_feed_data_access/: main.swift  news_feed_data_access.grpc.swift  news_feed_data_access.pb.swift  posts.grpc.swift  posts.pb.swift  shared.pb.swift  wall.grpc.swift  wall.pb.swift
news_feed_data_access/Sources/news_feed_data_access/protos/: news_feed_data_access.pb.swift  posts.pb.swift  wall.grpc.swift  wall.pb.swift
news_feed_data_access/Tests/: LinuxMain.swift
news_feed_data_access/Tests/news_feed_data_accessTests/: XCTestManifests.swift  news_feed_data_accessTests.swift
news_feed_data_access/db/: CreateNewsFeedDataAccessDB.sql  CreateTable.sql  Dockerfile
news_feed_merge/: .dockerignore  Dockerfile  Package.swift  README.md  kube_deploy.sh  news_feed_merge_kube.yaml
news_feed_merge/Sources/news_feed_merge/: main.swift
news_feed_merge/Sources/news_feed_merge/protos/: auth.grpc.swift  auth.pb.swift  friends.grpc.swift  friends.pb.swift  news_feed_data_access.grpc.swift  profile.grpc.swift  profile.pb.swift  user.pb.swift  user_setting.grpc.swift  user_setting.pb.swift
news_feed_merge/Tests/: LinuxMain.swift
news_feed_merge/Tests/news_feed_mergeTests/: XCTestManifests.swift  news_feed_mergeTests.swift
post_importer/: .dockerignore  Dockerfile  Package.resolved  Package.swift  README.md  kube_deploy.sh  post_importer_kube.yaml
post_importer/Sources/post_importer/: main.swift
post_importer/Sources/post_importer/protos/: post_importer.grpc.swift  post_importer.pb.swift  posts.grpc.swift  user.pb.swift  wall.grpc.swift
post_importer/Tests/: LinuxMain.swift
post_importer/Tests/post_importerTests/: XCTestManifests.swift  post_importerTests.swift
post_importer_cpp/: CMakeLists.txt  Dockerfile
post_importer_cpp/include/: main.cpp  redox_helper.h
post_importer_cpp/include/pbjson/: CMakeLists.txt
posts/: Dockerfile  __main__.py  kube_deploy.sh  posts_kube.yaml
posts_db/: CreatePostsDB.sql  Dockerfile
profile/: Dockerfile  __main__.py  kube_deploy.sh  profile_kube.yaml
protos/: apilayer.proto  auth.proto  create_user.proto  friends.proto  news_feed.proto  news_feed_data_access.proto  post_importer.proto  posts.proto  profile.proto  shared.proto  token.proto  user.proto  user_setting.proto  users.proto  wall.proto
tester/: Dockerfile  test_apilayer.py  test_auth.py  test_post_importer.py
token_dispenser/: Dockerfile  __main__.py  kube_deploy.sh  redis-deployment.yaml  redis-service.yaml  requirements.txt  token-deployment.yaml  token-service.yaml
user_setting/: Dockerfile  __main__.py  kube_deploy.sh  requirements.txt  user_setting_kube.yaml
user_setting_db/: CreateSettingsDB.sql  Dockerfile
users/: Dockerfile  __main__.py  kube_deploy.sh  requirements.txt  users_kube.yaml
users_db/: CreateUsersDB.sql  Dockerfile
wall/: Dockerfile  __main__.py  kube_deploy.sh  wall_kube.yaml
wall_db/: CreateWallDB.sql  Dockerfile
web_client/: Dockerfile  README.md  composer.json  kube_deploy.sh  php.ini  web_client_kube.yaml
web_client/src/Foobar/Apilayer/: ApiLayerServiceClient.php
web_client/src/Foobar/Auth/: Auth.php  AuthServiceClient.php  Token.php
web_client/src/Foobar/Posts/: Post.php  PostQuery.php  PostServiceClient.php
web_client/src/Foobar/Shared/: Location.php  PBEmpty.php
web_client/src/Foobar/User/: User.php  UserInfo.php
web_client/src/Foobar/Wall/: WallQuery.php  WallServiceClient.php
web_client/src/GPBMetadata/: Apilayer.php  Auth.php  Posts.php  Shared.php  User.php  Wall.php
web_client/www/: index.php  test.php
